--- a/public/Login/login.html
+++ b/public/Login/login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1> Harry expense tracker</h1>
+    <h1> Harry Expense tracker</h1>
     <form id="loginForm" onsubmit="login(event)">
         <h2>Login</h2>
         <label for="email">Enter your email:</label>
