--- a/public/Signup/signup.html
+++ b/public/Signup/signup.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+    <h1> Harry Expense tracker</h1>
     <form onsubmit="signup(event)">
         <label for="name">Enter name:</label>
         <input type="text" name="name" required />
